--- a/Demo/The Code Map/css/home.css
+++ b/Demo/The Code Map/css/home.css
@@ -1,6 +1,17 @@
 * {
     margin: 0;
 }
+body{
+	color:#fed03d;
+	background-color:#000;
+}
+a {
+    color: #fff;
+    text-decoration: none;
+}
+a:hover {
+    color: #fed03d;
+}
 .menu-top1 {
     width: 100%;
     display: none;
@@ -35,7 +46,6 @@
     float: right;
     opacity: 0.5;
     cursor: pointer;
-    box-shadow: 4px 2px 2px 2px #acacac;
     border-radius: 0 0 100px 100px;
     background-color: #fed03d;
 }
@@ -97,8 +107,8 @@
     display: flex;
     align-items: center;
     position: absolute;
-	color:#fed03d;
-    background-color: #000;
+	color:#fff;
+	border-bottom: 2px solid #fed03d;
     z-index: -999;
 }
 .solid-bar > span {
@@ -117,7 +127,7 @@
     display: block;
     font-size: 0;
 	border: 1px solid #fed03d;
-    background: #fed03d;
+    background-color: #fff;
     border-radius: 10px;
 }
 .solid-bar ul {
@@ -132,19 +142,84 @@
 }
 .top-banner {
     width: 100%;
-    height: 400px;
+	height: 600px;
     position: relative;
-    color: #fed03d;
     display: grid;
     align-items: center;
 	text-align:center;
+	z-index:-1000;
+	background-image: url("file:///D:/Documents/GitHub/JS-Practise-Easy-Examples/Demo/The%20Code%20Map/img/top-banner.jpg");
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	border-bottom: 2px solid #fed03d; 
+	border-top: 2px solid #fed03d; 
+}
+.top-banner h1{
+	font-size:5em;
 }
 .msolid-bar {
 	display:none;
 }
+.top-banner-button {
+    text-align: center;
+    display: block;
+    top: -20px;
+    position: relative;
+}
+.top-banner-button button {
+    width:200px;
+	height:40px;
+	background-color:#000;
+	color:#fff;
+	border:2px solid #fed03d;
+	cursor: pointer;
+}
+.top-banner-button button:hover {
+	background-color:#fed03d;
+	color:#000;
+	border:2px solid #fff;
+	cursor: pointer;
+}
+.top-banner-button button:active {
+	background-color:#fff;
+	color:#fed03d;
+	border:2px solid #000;
+}
+.middle-list{
+	margin:0 auto;
+	width:70%;
+}
+.middle-list h2{
+	width:100px;
+	text-align:center;
+	border-style: dashed;
+    border-bottom-style: none;
+    border-top-right-radius: 30px;
+	border-width:2px;
+}
+.web-map{
+	border:2px dashed #fed03d;
+	margin:0;
+	padding:0;
+	list-style-type: none;
+	border-bottom: none;
+}
+.web-map:last-of-type{
+	border-bottom: dashed;
+}
+.web-map li {
+    display: inline-flex;
+    align-items: center;
+    height: 50px;
+	padding-left:20px;
+	padding-right:20px;
+}
+
 /* pad css */
 @media screen and (max-width:960px) {
-    
+    .top-banner h1{
+		font-size:4em;
+	}
 }
 /* mobile css */
 @media screen and (max-width:640px) {
@@ -164,7 +239,8 @@
         width: calc(100%/5);
     }
 	.solid-bar{
-    	opacity:0;
+    	display:none;
+		background-color:#fff;
 	}
 	.msolid-bar{
     	display:block;
@@ -176,11 +252,11 @@
 	}
 	.mcode-list{
 		width:100%;
-		opacity:0;
 		position: absolute;
-		display: inline-grid;
+		display: block;
 		flex:auto;
-		z-index:-998;
+		top:40px;
+		z-index:1;
 	}
 	.mcode-list li{
 		border-bottom: 1px solid #fed03d;
@@ -193,5 +269,18 @@
     	align-items: center;
 		background-color:#000;
 		color:#fed03d;
+	}
+	.mcode-list li:hover {
+		background-color:#fed03d;
+		color:#000;
+	}
+	.top-banner {
+    top:-15px;
+	}
+	.top-banner h1{
+	font-size:3em;
+	}
+	.top-banner-button {
+    top: -35px;
 	}
 }
