--- a/Demo/The Code Map/css/home.css
+++ b/Demo/The Code Map/css/home.css
@@ -109,7 +109,6 @@ a:hover {
     position: absolute;
 	color:#fff;
 	border-bottom: 2px solid #fed03d;
-    z-index: -999;
 }
 .solid-bar > span {
     font-size: 0.8em;
@@ -148,7 +147,7 @@ a:hover {
     align-items: center;
 	text-align:center;
 	z-index:-1000;
-	background-image: url("file:///D:/Documents/GitHub/JS-Practise-Easy-Examples/Demo/The%20Code%20Map/img/top-banner.jpg");
+	background-image: url("https://github.com/zhangboheng/Javascript-Practise-Easy-Examples/blob/main/Demo/The%20Code%20Map/img/top-banner.jpg?raw=true");
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	border-bottom: 2px solid #fed03d; 
@@ -188,9 +187,12 @@ a:hover {
 .middle-list{
 	margin:0 auto;
 	width:70%;
+	position: relative;
+    top: 30px;
+	margin-bottom:50px;
 }
 .middle-list h2{
-	width:100px;
+	width:200px;
 	text-align:center;
 	border-style: dashed;
     border-bottom-style: none;
@@ -214,30 +216,73 @@ a:hover {
 	padding-left:20px;
 	padding-right:20px;
 }
-
+.return-top-button {
+	position:fixed;
+	width: 50px;
+	height: 50px;
+	color:#000;
+	background-color:#fed03d;
+	bottom:20px;
+	right:20px;
+	display: flex;
+	align-items: center;
+	border-radius:25px;
+	cursor:pointer;
+	opacity:0;
+}
+.return-top-button p{
+	margin: 0 auto;
+}
 /* pad css */
-@media screen and (max-width:960px) {
-    .top-banner h1{
-		font-size:4em;
+@media screen and (max-width:1024px) {
+   	.solid-bar{
+    	display:none;
+		background-color:#fff;
+	}
+	.msolid-bar{
+    	display:block;
+	}
+	#retangle-menu {
+    position: relative;
+    top: -10px;
+    left: -10px;
+	}
+	.mcode-list{
+		width:100%;
+		position: absolute;
+		display: block;
+		flex:auto;
+		top:40px;
+		z-index:1;
+	}
+	.mcode-list li{
+		border-bottom: 1px solid #fed03d;
+		display: grid;
+    	position: relative;
+   		left: -40px;
+		height: 40px;
+    	text-align: center;
+    	padding: 0px;
+    	align-items: center;
+		background-color:#000;
+		color:#fed03d;
+	}
+	.mcode-list li:hover {
+		background-color:#fed03d;
+		color:#000;
+	}
+	.top-banner {
+    top:-15px;
+	}
+	.top-banner h1{
+	font-size:3em;
+	}
+	.top-banner-button {
+    top: -35px;
 	}
 }
 /* mobile css */
 @media screen and (max-width:640px) {
-    .first-button {
-        width: calc(100%/5);
-    }
-    .second-button {
-        width: calc(100%/5);
-    }
-    .third-button {
-        width: calc(100%/5);
-    }
-    .fourth-button {
-        width: calc(100%/5);
-    }
-    .fifth-button {
-        width: calc(100%/5);
-    }
 	.solid-bar{
     	display:none;
 		background-color:#fff;
