--- a/Demo/The Code Map/css/home.css
+++ b/Demo/The Code Map/css/home.css
@@ -120,7 +120,7 @@ a:hover {
     font-style: normal;
 	padding-left:20px;
 }
-.icon img {
+.icon img{
     max-width: 100%;
     min-height: 100%;
     display: block;
@@ -128,6 +128,15 @@ a:hover {
 	border: 1px solid #fed03d;
     background-color: #fff;
     border-radius: 10px;
+}
+.list-icon img {
+    max-width: 100%;
+    min-height: 100%;
+    display: block;
+    font-size: 0;
+	border: 1px solid #fed03d;
+    background-color: #fff;
+    border-radius: 30px;
 }
 .solid-bar ul {
     margin:0;
@@ -205,6 +214,7 @@ a:hover {
 	padding:0;
 	list-style-type: none;
 	border-bottom: none;
+	display: block;
 }
 .web-map:last-of-type{
 	border-bottom: dashed;
@@ -212,9 +222,8 @@ a:hover {
 .web-map li {
     display: inline-flex;
     align-items: center;
-    height: 50px;
-	padding-left:20px;
-	padding-right:20px;
+    height: 120px;
+	padding-left:10px;
 }
 .return-top-button {
 	position:fixed;
@@ -222,7 +231,7 @@ a:hover {
 	height: 50px;
 	color:#000;
 	background-color:#fed03d;
-	bottom:20px;
+	bottom:40px;
 	right:20px;
 	display: flex;
 	align-items: center;
@@ -232,6 +241,33 @@ a:hover {
 }
 .return-top-button p{
 	margin: 0 auto;
+}
+.useful-links {
+	margin-top:300px;
+	height:40px;
+	color:#fed03d;
+	display:flex;
+	align-items: center;
+	background-color:#000;
+	border-top:2px solid #fed03d;
+}
+.useful-links ul {
+	margin: 0 auto;
+	padding:0;
+	list-style: none;
+	width:70%;
+}
+.useful-links ul>li {
+	display: inline-block;
+	padding-right:20px;
+}
+.web-map li i {
+    display: inline-block;
+    margin: 0 auto;
+    width: 50px;
+    height: 0px;
+	align-items: center;
+    padding-bottom: 27px;
 }
 /* pad css */
 @media screen and (max-width:1024px) {
@@ -327,5 +363,8 @@ a:hover {
 	}
 	.top-banner-button {
     top: -35px;
+	}
+	.web-map{
+	display: grid;
 	}
 }
